--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -53,6 +53,6 @@ a {
 }
 @media (min-width: 992px) {
 	.section-title {
-		font-size: 4rem;
+		font-size: 5rem;
 	}
 }
